--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="font-weight-bold" style="font-family: 'PT Sans', sans-serif">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script
